# acc_ide

./: .gitignore  ACM_COMPLETION_GUIDE.md  CODE_CLEANUP_SUMMARY.md  COMPLETION_FRAMEWORK_SUMMARY.md  COMPLETION_TEST_SUMMARY.md  CPP_WASM_IMPLEMENTATION.md  EXECUTOR_STATUS_UPDATE.md  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_cn.md  README_en.md  RELEASE.md  TESTING_COMPLETION.md  TESTING_GUIDE.md  TREESITTER_INTEGRATION_SUMMARY.md  WASM_CLANG_TODO.md  WASM_IMPLEMENTATION.md  debug_query_test.cpp  jitpack.yml  parseCodeWithQueries_replacement.kt  run_completion_tests.py  settings.gradle.kts  start.sh  test_array_recognition.cpp  test_param.cpp  test_scope_and_arrays.cpp  test_sorting.py  test_sorting_simple.py  test_standard_query.cpp  treesitter_TODO.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: pr_agent.yml
accide-code-execution-main/: README.md
accide-code-execution-main/.github/workflows/: code-execution.yml
app/: build.gradle  build.gradle.backup  build.gradle.kts  lint-baseline.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/textmate/languages/: language.json
app/src/main/assets/textmate/themes/: dark.json  light.json
app/src/main/assets/wasm/: README.md  cpp_compiler.html  cpp_compiler_v2.html
app/src/main/cpp/: CMakeLists.txt  README_Architecture.md  TreeSitterCore.cpp  TreeSitterJNI.cpp  TreeSitterJNI.h  TreeSitterJNI_New.cpp  TreeSitterJNI_original.cpp  TreeSitterQuery.cpp
app/src/main/cpp/core/: AbstractTreeSitterProcessor.cpp  TreeSitterRegistry.cpp
app/src/main/cpp/include/tree_sitter/: api.h
app/src/main/cpp/languages/: JavaLanguageProcessor.cpp  PythonLanguageProcessor.cpp
app/src/main/java/com/acc_ide/: EditorFragment.kt  IOPanelFragment.kt  MainActivity.kt  SettingsFragment.kt  SplashActivity.kt
app/src/main/java/com/acc_ide/adapter/: FileListAdapter.kt
app/src/main/java/com/acc_ide/completion/: ACMCompletionProvider.kt  ACMLanguage.kt  HybridACMLanguage.kt  LanguageManager.kt  README.md
app/src/main/java/com/acc_ide/dialog/: DeleteFileConfirmDialog.kt  NewFileDialogFragment.kt  RenameFileDialog.kt
app/src/main/java/com/acc_ide/execution/: AnsiTextParser.kt  ExecutionResult.kt  ExecutorFactory.kt  GitHubExecutor.kt  ICodeExecutor.kt  IOCacheManager.kt  LocalExecutor.kt  README.md
app/src/main/res/drawable/: baseline_redo_24.xml  baseline_undo_24.xml  log_background.xml  scrollbar_thumb_dark.xml  scrollbar_thumb_light.xml  scrollbar_thumb_pressed_dark.xml  scrollbar_thumb_pressed_light.xml  scrollbar_thumb_selector_dark.xml  scrollbar_thumb_selector_light.xml  scrollbar_track_dark.xml  scrollbar_track_light.xml
app/src/main/res/layout/: activity_main.xml  activity_splash.xml  dialog_rename_file.xml  file_list_item.xml  fragment_editor.xml  fragment_io_panel.xml  fragment_settings.xml  fragment_welcome.xml  view_symbol_page.xml  view_symbol_panel.xml
app/src/main/res/menu/: editor_menu.xml  file_options_menu.xml  main_menu.xml
app/src/main/res/raw/: acm_templates.json
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
completion-library/: README.md  build.gradle  consumer-rules.pro  proguard-rules.pro
executor-library/: CHANGELOG.md  OPTIMIZATION_REPORT.md  PREWARM_GUIDE.md  README.md  build.gradle  consumer-rules.pro  proguard-rules.pro
executor-library/src/main/: AndroidManifest.xml
executor-library/src/main/assets/wasm/cpp/: cpp_executor.html  cpp_executor.js
executor-library/src/main/assets/wasm/python/: python_executor.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
release/: CHANGELOG.md
release/1.2.0/: README.md  checksums.txt  index.html  release_notes.txt
treesitter-build/: Build-TreeSitter.ps1  Build-TreeSitter.sh  README.md
treesitter-core/: README.md  build.gradle  consumer-rules.pro  proguard-rules.pro
treesitter-core/src/main/cpp/: CMakeLists.txt  TreeSitterJNI.cpp  TreeSitterJNI.h
treesitter-core/src/main/cpp/core/: AbstractTreeSitterProcessor.h  ILanguageProcessor.h  TreeSitterRegistry.h
treesitter-core/src/main/cpp/languages/: CppLanguageProcessor.cpp  CppLanguageProcessor.h  JavaLanguageProcessor.h  PythonLanguageProcessor.h
treesitter_build/: Build-Complete-TreeSitter.ps1  README.md
wasmClang-build/: Download-WasmClang.ps1  Download-WasmClang.sh  README_WASM_CLANG.md
(+84 files in other folders)
